--- a/src/layout.html
+++ b/src/layout.html
@@ -1,18 +1,35 @@
-<div layout="column">
-  <md-toolbar layout="row">
-    <div class="md-toolbar-tools layout-align-space-between-stretch" layout-align="space-between">
-      <div class="md-title">Material Design Data Table</div>
-    </div>
-  </md-toolbar>
-  <div layout="row" flex>
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-      <ui-view name="navigation"></ui-view>
-    </md-sidenav>
-
-    <div layout="column" flex id="content">
-      <md-content layout="column" flex class="md-padding">
-        <ui-view name="content"></ui-view>
-      </md-content>
-    </div>
+<md-toolbar>
+  <div class="md-toolbar-tools">
+    <h2 flex md-truncate>{{ $ctrl.currentState }}</h2>
   </div>
+</md-toolbar>
+
+<div layout="row">
+
+  <md-sidenav class="md-sidenav-left" md-is-locked-open="true" layout="column">
+    <md-list role="list">
+
+      <md-list-item role="listitem" class="md-clickable">
+        <a ui-sref='repositories'>Repositories</a>
+      </md-list-item>
+
+      <md-list-item role="listitem" class="md-clickable">
+        <a ui-sref='index'>Snapshots</a>
+      </md-list-item>
+
+      <md-list-item role="listitem" class="md-clickable">
+        <a ui-sref='index'>Published</a>
+      </md-list-item>
+
+      <md-list-item role="listitem" class="md-clickable">
+        <a ui-sref='uploads'>Uploads</a>
+      </md-list-item>
+
+    </md-list>
+  </md-sidenav>
+
+  <md-content flex layout-padding>
+    <ui-view name="main"></ui-view>
+  </md-content>
+
 </div>
