migrating routes around

--- a/src/layout.html
+++ b/src/layout.html
@@ -22,7 +22,7 @@
       </md-list-item>
 
       <md-list-item role="listitem" class="md-clickable">
-        <a ui-sref='uploads'>Uploads</a>
+        <a ui-sref='directories'>Uploads</a>
       </md-list-item>
 
     </md-list>
