file import; added issues.md; generic cleanup
This is a big commit -- sorry.

--- a/src/layout.html
+++ b/src/layout.html
@@ -10,7 +10,7 @@
     <md-list role="list">
 
       <md-list-item role="listitem" class="md-clickable">
-        <a ui-sref='repositories'>Repositories</a>
+        <a ui-sref='repoList'>Repositories</a>
       </md-list-item>
 
       <md-list-item role="listitem" class="md-clickable">
